# rag-testing

./: answer.py  ingest.py  main.py  pyproject.toml  requirements.txt
company_documentation/company/careers/: careers.md
company_documentation/company/company/: company_overview.md  culture.md
company_documentation/company/contracts/: CON001_JPMorgan_Chase_and_Co.md  CON002_NHS_England.md  CON003_US_Department_of_Defense.md  CON004_Unilever_PLC.md  CON005_Barclays_Bank.md  CON006_Deutsche_Telekom_AG.md  CON007_Walmart_Inc.md  CON008_BMW_Group.md  CON009_AstraZeneca_PLC.md  CON010_FedEx_Corporation.md  CON011_Shell_plc.md  CON012_Roche_Holding_AG.md  CON013_Marriott_International.md  CON014_Siemens_AG.md  CON015_Citibank_NA.md  CON016_Airbus_SE.md  CON017_KPMG_International.md  CON018_Emirates_Airlines.md  CON019_Singapore_Telecommunications_Ltd.md  CON020_L'Oréal_SA.md
company_documentation/company/employees/: EMP001_Marcus_A_Reynolds.md  EMP002_Priya_Nair.md  EMP003_Daniel_Khoury.md  EMP004_Sarah_Whitfield.md  EMP005_Arun_Mehta.md  EMP006_Lisa_Tanaka.md  EMP007_James_O'Brien.md  EMP008_Riya_Sharma.md  EMP009_Thomas_Brennan.md  EMP010_Amina_Hassan.md  EMP011_Carlos_Mendez.md  EMP012_Emily_Chen.md  EMP013_David_Park.md  EMP014_Fatima_Al-Rashid.md  EMP015_Nathan_Brooks.md  EMP016_Olivia_Turner.md  EMP017_Kwame_Asante.md  EMP018_Mei_Lin_Zhang.md  EMP019_Roberto_Ferraro.md  EMP020_Jasmine_Williams.md  EMP021_Aaron_Mitchell.md  EMP022_Sunita_Rao.md  EMP023_Lucas_Petrov.md  EMP024_Hannah_Johansson.md  EMP025_Michael_Osei.md  (+5 more)
rag-optimization/: optimized_ingest.py
(+10 files in other folders)
